# Basic-C-Programs

./: AllFactorsOfANumber.c  AreaOfPolygon.c  BettingGame.c  CMakeLists.txt  ConvertDecimalToBaseB.c  Factorial  FactorialUsingRecursion  FibonacciRecursionMemoization  FibonacciSeries  FibonacciUsingRecursion  GCDusingEuclidAlgo.c  Main.c  Main.cpp  ModularExponentiation.c  NumberOfDigits  PointDirectionFromLineSeg.c  Pointers.c  PowerOrExponent  PowerorExponentRecursion  PrimeFactorization .c  PrimeNumber  PrimeSieveOfEratosthenes.c  README.md  ReverseANumber  SmallestDenominations  SumOfDigitsOfANumber  SwapTwoIntegers.txt  SwapTwoIntegersWithoutUsingThirdVariable.txt
